--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -30,7 +30,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.143.1 # ⬅️ 已提升版本以相容 hugo-brewm 主題
+      HUGO_VERSION: 0.143.1 # 確保版本高於 0.135.0 以支援主題特性
     steps:
       - name: Install Hugo CLI
         run: |
@@ -42,7 +42,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
-          fetch-depth: 0 # ⬅️ 建議加上這行以支援 enableGitInfo = true
+          fetch-depth: 0 # 支援最後修改日期顯示
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
@@ -57,4 +57,18 @@ jobs:
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Upload artifact
-        uses: actions/upload-pages-artifact
+        uses: actions/upload-pages-artifact@v3 # 修正原本遺漏的版本號
+        with:
+          path: ./public
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4 # 修正原本遺漏的版本號
