--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -8,6 +8,7 @@ theme = 'hugo-brewm'
 enableGitInfo = true
 ## Convert all URLs to absolute URLs
 canonifyURLs = true
+relativeURLs = false
 ## Default language for content
 defaultContentLanguage = 'zh-tw'
 ## Put default language in subdirectory
